# csplugin-procwatch

./: Makefile.am  README.md  configure.ac  csplugin-procwatch.conf  csplugin-procwatch.cpp  csplugin-procwatch.h  csplugin-procwatch.spec  csplugin-procwatch.spec.in  procwatch-action-group.cpp  procwatch-action-group.h  procwatch-conf.cpp  procwatch-conf.h
